# office-convert-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  cspell.json  dist-workspace.toml  docker-compose.yml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: client.rs  lib.rs  load.rs
client/tests/: test_load_balancing.rs
client/tests/samples/: sample.docx
scripts/: multi-instance.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  office_profile.rs  service.rs
tests/: conversion.rs  startup_validation.rs
tests/common/: mod.rs
