[package]
name = "office-convert-server"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jacobtread/office-convert-server"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"
description = "HTTP server for converting office file formats to PDFs"

[workspace]
members = [".", "./client"]

[dependencies]
# Cheap sharable byte array type
bytes = "1"

# Core libreoffice library
libreofficekit = { version = "0.5" }

# Environment variables
dotenvy = "0.15"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server
axum = { version = "0.8.8", features = ["multipart"] }
axum_typed_multipart = "0.16.5"

# Async runtime
tokio = { version = "1", features = ["rt", "signal"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Basic logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Random unique IDs for file names
uuid = { version = "1.19.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
