[package]
name = "office-convert-client"
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jacobtread/office-convert-server"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "../README.md"
description = "Client library for interacting with office-convert-server"

[dependencies]
# Cheap bytes type
bytes = "1"

# HTTP client
reqwest = { version = "0.13", features = [ "json", "multipart" ] }

# JSON and (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Asynchronous primitives
tokio = { version = "1", features = ["sync", "time", "parking_lot"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
testcontainers = { version = "0.26.3", features = ["http_wait"] }
tracing-subscriber = "0.3"
